# symmetry-cli

./: Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: dev-install.sh  install.ps1  install.sh
src/: auth.rs  cli.rs  crypto.rs  envfile.rs  fsutil.rs  keystore.rs  main.rs  manifest.rs  scan.rs  ui.rs
src/commands/: decrypt.rs  encrypt.rs  init.rs  key.rs  mod.rs  run.rs  show.rs  status.rs  var.rs
tests/: cli.rs
